Quick fix on creat alignement

--- a/assembl/static2/css/components/avatar.scss
+++ b/assembl/static2/css/components/avatar.scss
@@ -21,6 +21,10 @@
     font-size: $font-size-xs;
     margin: 3px 0;
   }
+
+  .caret {
+    padding-bottom: 5px;
+  }
 }
 
 @media screen and (max-width: 767px) {
